--- a/dots/user/.config/yasb/config.yaml
+++ b/dots/user/.config/yasb/config.yaml
@@ -36,7 +36,7 @@ bars:
           widgets:
                left: [ "komorebi_workspaces" ]
                center: [ "clock" ]
-               right: [ "komorebi_stack", "volume", "bluetooth", "power_menu" ]
+               right: [ "komorebi_stack", "microphone", "volume", "bluetooth", "power_menu" ]
 widgets:
 
      power_menu:
@@ -66,6 +66,42 @@ widgets:
           type: "yasb.volume.VolumeWidget"
           options:
                label: "🔈{level}"
+               audio_menu:
+                    blur: true
+                    round_corners: true
+                    round_corners_type: "normal"
+                    border_color: "system"
+                    alignment: "right"
+                    direction: "down"
+               callbacks:
+                    on_left: "toggle_mute"
+                    on_right: "toggle_volume_menu"
+
+     microphone:
+          type: "yasb.microphone.MicrophoneWidget"
+          options:
+               label: "<span>{icon}</span>"
+               label_alt: "<span>{icon}</span> {level}"
+               mute_text: "mute"
+               icons:
+                    normal: "🎙️"
+                    muted: "😶"
+               mic_menu:
+                    blur: true
+                    round_corners: true
+                    round_corners_type: "normal"
+                    border_color: "system"
+                    alignment: "right"
+                    direction: "down"
+               callbacks:
+                    on_left: "toggle_mute"
+                    on_middle: "toggle_label"
+                    on_right: "toggle_mic_menu"
+               label_shadow:
+                    enabled: true
+                    color: "black"
+                    radius: 3
+                    offset: [ 1, 1 ]
 
      bluetooth:
           type: "yasb.bluetooth.BluetoothWidget"
